first test using tdd